# cmake-minimal-examples

./: README.md
example-CMakeLists/: CMakeLists.txt.0  CMakeLists.txt.1  CMakeLists.txt.2
example-CMakeLists/cmake/: CeresConfig.cmake  CeresTargets.cmake
with-external-dir/main/: .clang-format  CMakeLists.txt  main.cpp
with-external-dir/utils/: CMakeLists.txt
with-external-dir/utils/src/: utils.cpp
with-find-package/main/: CMakeLists.txt
with-find-package/utils/: .clang-tidy  CMakeLists.txt  config.cmake.in
with-sanitizers/: CMakeLists.txt
with-sanitizers/cmake/: FindSanitizers.cmake  FindUBSan.cmake
with-sanitizers/utils/include/utils/: utils.h
with-subdir/: CMakeLists.txt  main.cpp
